Updated image border

--- a/people/mark.qmd
+++ b/people/mark.qmd
@@ -19,9 +19,9 @@ Mark is a Senior Lecturer and convenor on the course [HDAT9700](../courses.html#
 
 The paper that comes to mind is [Modelling vaccination capacity at mass vaccination hubs and general practice clinics: a simulation study](https://doi.org/10.1186/s12913-022-08447-8)[^1] We started this paper in early 2021, when it became clear that vaccination hubs were going to be an important part of the COVID-19 mass vaccination program. At the time, there was limited information available on the logistics of delivering vaccinations at scale so in this study we used a special class of model---queue network models---to try to figure out the sweet spot between number of vaccinations per day, staffing levels and target processing times. 
 
-I love this paper because it was addressing a very real and practical question. Before starting the I spent time at the Royal Prince Alfred Hospital COVID Vaccination Clinic speaking to the health staff preparing and delivering vaccinations to better understand the process we were modelling. I also presented the completed work to the NSW Health Sydney Local Health District, as they prepared to set up their mass vaccination hub at Olympic Park.
+I love this paper because it was addressing a very real and practical question. To inform the analysis I spent time at the Royal Prince Alfred Hospital COVID Vaccination Clinic speaking to the health staff preparing and delivering vaccinations to better understand the process we were modelling. I also presented the completed work to the NSW Health Sydney Local Health District, as they prepared to set up their mass vaccination hub at Olympic Park.
 
-The other thing I thought went well with this paper is the many ways we made the work accessible. To accompany the analysis we developed a [shiny app](https://cbdrh.shinyapps.io/queueSim/) that allows users to rerun our models, or to run alternative queuing models based on their own circumstances (number of staff, target daily vaccinations etc). As a companion to the academic paper, we also published an article in [The Conversation](https://theconversation.com/australian-vaccine-rollout-needs-all-hands-on-deck-after-the-latest-astrazeneca-news-mass-vaccination-hubs-included-158519) to help share the lessons from our work as broadly as possible. Finally, all of the code from the analysis was made available on [GitHub](https://github.com/CBDRH/vaccineQueue/), following best practice for open science and reproducibility. 
+The other nice aspect of this paper was the many ways we made the work accessible. To accompany the analysis we developed a [shiny app](https://cbdrh.shinyapps.io/queueSim/) that allows users to rerun our models, or to run alternative queuing models based on their own circumstances (number of staff, target daily vaccinations etc). As a companion to the academic paper, we also published an article in [The Conversation](https://theconversation.com/australian-vaccine-rollout-needs-all-hands-on-deck-after-the-latest-astrazeneca-news-mass-vaccination-hubs-included-158519) to help share the lessons from our work as broadly as possible. Finally, all of the code from the analysis was made available on [GitHub](https://github.com/CBDRH/vaccineQueue/), following best practice for open science and reproducibility. 
 
 [^1]: Hanly M, Churches T, Fitzgerald O, Caterson I, MacIntyre CR, Jorm L. _Modelling vaccination capacity at mass vaccination hubs and general practice clinics: a simulation study._ **BMC Health Services Research**. 22, 1059 (2022). [https://doi.org/10.1186/s12913-022-08447-8](https://doi.org/10.1186/s12913-022-08447-8)
 
