--- a/posts/2023-11-30-advent-of-code/index.qmd
+++ b/posts/2023-11-30-advent-of-code/index.qmd
@@ -5,7 +5,7 @@ author:
   - name: Sean de Boo
 date: 2023-11-30
 categories: [Health Data Science, Advent of Code] # self-defined categories
-image: "photosdb.jpg"
+image: "photosdb-cr.jpg"
 draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 ---
 
