--- a/tutorials/lesson5.qmd
+++ b/tutorials/lesson5.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Step 5. Predictive modelling"
+title: "Step 5. Predicting outcomes"
 description: _Can you use machine learning to predict future health outcomes?_
 image: ../images/tutorial5.jpg
 comments: false
@@ -53,7 +53,7 @@ birth_weight_dataset.rename(columns={'Unnamed: 0':'patient_id'}, inplace=True)
 
 ### Decision Trees
 
-To predict low birthweight we will use a model called a [single decision tree](https://scikit-learn.org/stable/modules/tree.html). This is a type of algorithm that processes data by asking a series of "yes" or "no" questions about different variables---conventionalluy referred to as features---measured in the dataset. The resulting path of decisions resembles a tree with many branches, hence the name "decision tree". 
+To predict low birthweight we will use a model called a [single decision tree](https://scikit-learn.org/stable/modules/tree.html). This is a type of algorithm that processes data by asking a series of "yes" or "no" questions about different variables---conventionally referred to as features---measured in the dataset. The resulting path of decisions resembles a tree with many branches, hence the name "decision tree". 
 
 The first question is at the top of the tree, known as the "root". Based on the answer to the first question, you follow one of the branches to the next question. Each branch represents a decision or a choice. At each step (or "node"), there's a new question. Your answers guide you through the tree, moving from one question to the next. Eventually, you reach the end of a branch, which is like the "leaves" of the tree. The leaves give you the final prediction for a given individual, based on their characteristics. In this case, it will be a prediction of whether or not a baby will be born with low birthweight. 
 
@@ -143,6 +143,10 @@ Here you can see the mechanics of the decision tree. The first question relates 
 
 * If the answer is no previous premature labours (i.e. $\le 0.5$) the next question asks whether or not `lwt` (weight at last menstrual period) was $\le 106$ lbs.
 * If the answer is one or more previous premature labours (i.e. $\gt 0.5$) the the next question asks whether or not maternal age was $\le 31.5$ years. 
+
+::: {.aside}
+![A more accurate representation of our decision tree!](../images/tutorial5-rotated.jpg)
+:::
 
 As you can see, if you allow the tree to grow without any limitation, the tree continues asking "yes/no" questions, branching out more and more. This unrestricted growth can result in a highly complex model that captures not only the underlying patterns but also the noise in the training data. As is the case here, such a tree may perform exceptionally well on the training dataset but fail to predict accurately on new, unseen data due to its over-specialisation (overfitting).
 
